--- a/interval_timer/Cargo.toml
+++ b/interval_timer/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "interval_timer"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
 
 [dependencies]
 eframe = "0.31.0"
 rodio = "0.20.1"
+
+[[bin]]
+name = "interval_timer"
+path = "src/main.rs"
