--- a/interval_timer/Cargo.toml
+++ b/interval_timer/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "interval_timer"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2024"
 
 [dependencies]
-eframe = "0.31.0"
+eframe = "0.31.1"
+egui = "0.31.1"
 rodio = "0.20.1"
-image = "0.24"
+image = "0.25.5"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
+winit = "0.30.9"
 
 [[bin]]
 name = "interval_timer"
