--- a/interval_timer/Cargo.toml
+++ b/interval_timer/Cargo.toml
@@ -11,6 +11,8 @@ image = "0.25.5"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 winit = "0.30.9"
+winres = "0.1.12"
+
 
 [[bin]]
 name = "interval_timer"
