--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
 winit = "0.30.9"
 embed-resource = "3.0.2"
+lazy_static = "1.5.0"
 
 [build-dependencies]
 winres = "0.1.12"
